--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <div class="p-4 border-hover shadow rounded-5 h-100">
                         <img src="./assets/images/api-rest.png" class="img-fluid rounded-5 mb-3" alt="">
                         <span class="badge bg-info">Api Restful with Node js</span>
-                        <a href="#" class="d-block mt-4">
+                        <a href="https://github.com/mohamedfaysal/Api-Rest---Node-js" class="d-block mt-4">
                             <h5>Api Rest</h5>
                         </a>
                     </div>
@@ -180,7 +180,7 @@
                     <div class="p-4 border-hover shadow rounded-5 h-100">
                         <img src="./assets/images/photothèque.jpeg" class="img-fluid rounded-5 mb-3" alt="">
                         <span class="badge bg-info">Node js</span>
-                        <a href="#" class="d-block mt-4">
+                        <a href="https://github.com/mohamedfaysal/Photo-gallery-App-Node-js" class="d-block mt-4">
                             <h5>Photo gallery app</h5>
                         </a>
                     </div>
@@ -189,7 +189,7 @@
                     <div class="p-4 border-hover shadow rounded-5 h-100">
                         <img src="./assets/images/pwa.png" class="img-fluid rounded-5 mb-3" alt="">
                         <span class="badge bg-info">Progressive Web App</span>
-                        <a href="#" class="d-block mt-4">
+                        <a href="https://github.com/mohamedfaysal/Movies-App-PWA" class="d-block mt-4">
                             <h5>Movies app</h5>
                         </a>
                     </div>
@@ -198,7 +198,7 @@
                     <div class="p-4 border-hover shadow rounded-5 h-100">
                         <img src="./assets/images/react-app.png" class="img-fluid rounded-5 mb-3" alt="">
                         <span class="badge bg-info">React js</span>
-                        <a href="#" class="d-block mt-4">
+                        <a href="https://github.com/mohamedfaysal/Country-App-React" class="d-block mt-4">
                             <h5>Country app</h5>
                         </a>
                     </div>
