Third version : adding my projects links

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
             <div class="row py-5 gy-5 gx-5 flex-row">
                 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="academic border-hover p-4 shadow rounded-5 h-100">
-                        <div class="icon  rounded-5"><i class="ri-stack-fill"></i></div>
+                        <div class="icon  rounded-5 mb-4"><i class="ri-stack-fill"></i></div>
+                        <span class="badge bg-info rounded-pill">1</span>
                         <h3 class="mt-3 fw-bold">Gogo Departmental High School</h3>
                         <p class="paragraphe">
                             I spent my junior high and part of my senior year there. During these years I received very
@@ -107,7 +108,8 @@
 
                 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="academic border-hover p-4 shadow rounded-5 h-100">
-                        <div class="icon  rounded-5"><i class="ri-stack-fill"></i></div>
+                        <div class="icon  rounded-5 mb-4"><i class="ri-stack-fill"></i></div>
+                        <span class="badge bg-info rounded-pill">2</span>
                         <h3 class="mt-3 fw-bold">Municipal High School of Manga</h3>
                         <p class="paragraphe">
                             One of the most renowned schools in the region. Integrating this establishment allowed me to
@@ -119,7 +121,8 @@
 
                 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="academic border-hover p-4 shadow rounded-5 h-100">
-                        <div class="icon  rounded-5"><i class="ri-stack-fill"></i></div>
+                        <div class="icon  rounded-5 mb-4"><i class="ri-stack-fill"></i></div>
+                        <span class="badge bg-info rounded-pill">3</span>
                         <h3 class="mt-3 fw-bold">Faculty of Sciences Semlalia of Marrakech</h3>
                         <p class="paragraphe">
                             In this faculty I learned to sharpen my logic and to develop a taste for mathematics
@@ -131,7 +134,8 @@
 
                 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="400">
                     <div class="academic border-hover p-4 shadow rounded-5 h-100">
-                        <div class="icon  rounded-5"><i class="ri-stack-fill"></i></div>
+                        <div class="icon  rounded-5 mb-4"><i class="ri-stack-fill"></i></div>
+                        <span class="badge bg-info rounded-pill">4</span>
                         <h3 class="mt-3 fw-bold">National School of Electricity and Mechanics</h3>
                         <p class="paragraphe">
                             I am currently learning computer engineering there.
@@ -163,7 +167,7 @@
                         <img src="./assets/images/api-rest.png" class="img-fluid rounded-5 mb-3" alt="">
                         <span class="badge bg-info">Api Restful with Node js</span>
                         <a href="https://github.com/mohamedfaysal/Api-Rest---Node-js" class="d-block mt-4">
-                            <h5>Api Rest</h5>
+                            <h5><i class="ri-github-fill"></i> <br> Api Rest</h5>
                         </a>
                     </div>
                 </div>
@@ -171,8 +175,8 @@
                     <div class="p-4 border-hover shadow rounded-5 h-100">
                         <img src="./assets/images/asp-net-core.png" class="img-fluid rounded-5 mb-3" alt="">
                         <span class="badge bg-info">Asp net core Razor Pages</span>
-                        <a href="#" class="d-block mt-4">
-                            <h5>Pizza Web App</h5>
+                        <a href="https://github.com/mohamedfaysal/Pizza-App-Net-Core-Razor-Pages" class="d-block mt-4">
+                            <h5><i class="ri-github-fill"></i> <br> Pizza Web App</h5>
                         </a>
                     </div>
                 </div>
@@ -181,7 +185,7 @@
                         <img src="./assets/images/photothèque.jpeg" class="img-fluid rounded-5 mb-3" alt="">
                         <span class="badge bg-info">Node js</span>
                         <a href="https://github.com/mohamedfaysal/Photo-gallery-App-Node-js" class="d-block mt-4">
-                            <h5>Photo gallery app</h5>
+                            <h5><i class="ri-github-fill"></i> <br> Photo gallery app</h5>
                         </a>
                     </div>
                 </div>
@@ -190,7 +194,7 @@
                         <img src="./assets/images/pwa.png" class="img-fluid rounded-5 mb-3" alt="">
                         <span class="badge bg-info">Progressive Web App</span>
                         <a href="https://github.com/mohamedfaysal/Movies-App-PWA" class="d-block mt-4">
-                            <h5>Movies app</h5>
+                            <h5><i class="ri-github-fill"></i> <br> Movies app</h5>
                         </a>
                     </div>
                 </div>
@@ -199,7 +203,7 @@
                         <img src="./assets/images/react-app.png" class="img-fluid rounded-5 mb-3" alt="">
                         <span class="badge bg-info">React js</span>
                         <a href="https://github.com/mohamedfaysal/Country-App-React" class="d-block mt-4">
-                            <h5>Country app</h5>
+                            <h5><i class="ri-github-fill"></i> <br> Country app</h5>
                         </a>
                     </div>
                 </div>
