--- a/index.html
+++ b/index.html
@@ -61,17 +61,19 @@
                         src="./assets/images/profil.jpg" alt="">
                 </div>
                 <div class="col-lg-7">
-                    <h1 class="fw-bold display-4 mb-4 " data-aos="fade-up">I AM A<br><span class="text-info">SOFTWARE
+                    <h1 class="fw-bold display-4 mb-4 " data-aos="fade-up">I AM A<br><span class="text-info">DATA
+                            SCIENCE
                             INGINEER</span></h1>
                     <p class="home-p" data-aos="fade-up" data-aos-delay="200">
-                        I am a young man with a lot of talent. I love and encourage work well done.
-                        My field of predilection includes all that touches the digital and
-                        digitalization. This passion for computer science pushes me daily to remain in the arena of
-                        action. The rigor, the sense of responsibility
-                        discipline and teamwork are among the intrinsic qualities that define me.
+                        Over the course of my studies in and academic experiences, my unwavering passion for computer
+                        science in general, and data science more specifically, took root and flourished. Fascinated by
+                        how data can be transformed into meaningful information, I have constantly sought to deepen my
+                        knowledge in the field of data analysis. My interest in computer science stems from my belief
+                        that technology can solve complex problems and provide innovative solutions.
                     </p>
-                    <a data-aos="fade-up" data-aos-delay="300" target="_blank" href="./assets/file/cv.pdf"
-                        class="btn btn-outline-info me-3">Download my CV</a>
+                    <a data-aos="fade-up" data-aos-delay="300" target="_blank"
+                        href="./assets/file/CV- YAMEOGO  Mohamed  Faysal.pdf" class="btn btn-outline-info me-3">Download
+                        my CV</a>
                     <a data-aos="fade-up" data-aos-delay="400" href="mailto:faysalyameogo1@gmail.com"
                         class="btn btn-info">Contact Me</a>
                 </div>
@@ -143,6 +145,19 @@
                         <p class="fw-bold">Degree : State Engineering Diploma in Computer Engineering</p>
                     </div>
                 </div>
+
+                <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="academic border-hover p-4 shadow rounded-5 h-100">
+                        <div class="icon  rounded-5 mb-4"><i class="ri-stack-fill"></i></div>
+                        <span class="badge bg-info rounded-pill">5</span>
+                        <h3 class="mt-3 fw-bold">National Institute of Applied Sciences</h3>
+                        <p class="paragraphe">
+                            Currently on a mobility program at one of France's most prestigious schools.
+                            The story continues to unfold...
+                        </p>
+                        <p class="fw-bold">Degree : State Engineering Diploma in Computer Engineering</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -207,6 +222,15 @@
                         </a>
                     </div>
                 </div>
+                <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="500">
+                    <div class="p-4 border-hover shadow rounded-5 h-100">
+                        <img src="./assets/images/salary.jpg" class="img-fluid rounded-5 mb-3" alt="">
+                        <span class="badge bg-info">Machine Learning</span>
+                        <a href="https://github.com/mohamedfaysal/Developer-salary-prediction" class="d-block mt-4">
+                            <h5><i class="ri-github-fill"></i> <br>Software developer salary prediction</h5>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -242,8 +266,8 @@
                                 <div>
                                     <h5 class="small">CSS</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 60%">60%</div>
+                                        aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar bg-info" style="width: 80%">80%</div>
                                     </div>
                                 </div>
                             </div>
@@ -276,15 +300,6 @@
                             </div>
                             <div class="col-12">
                                 <div>
-                                    <h5 class="small">JQUERY</h5>
-                                    <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 60%">60%</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div>
                                     <h5 class="small">REACT JS</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
                                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
@@ -305,8 +320,8 @@
                                 <div>
                                     <h5 class="small">NODE JS</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 50%">50%</div>
+                                        aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar bg-info" style="width: 70%">70%</div>
                                     </div>
                                 </div>
                             </div>
@@ -314,8 +329,8 @@
                                 <div>
                                     <h5 class="small">EXPRESS</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 60%">60%</div>
+                                        aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar bg-info" style="width: 70%">70%</div>
                                     </div>
                                 </div>
                             </div>
@@ -332,30 +347,11 @@
                                 <div>
                                     <h5 class="small">JEE</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 30%">30%</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="card bg-secondary m-4" style="max-width: 30rem;" data-aos="fade-up" data-aos-delay="300">
-                    <div class="card-header fw-bold">DESIGN</div>
-                    <div class="card-body">
-                        <div class="row gy-3">
-                            <div class="col-12">
-                                <div>
-                                    <h5 class="small">FIGMA</h5>
-                                    <div class="progress" role="progressbar" aria-label="Example with label"
                                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                                         <div class="progress-bar bg-info" style="width: 40%">40%</div>
                                     </div>
                                 </div>
                             </div>
-
                         </div>
 
                     </div>
@@ -387,8 +383,8 @@
                                 <div>
                                     <h5 class="small">HIBERNATE</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 30%">30%</div>
+                                        aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar bg-info" style="width: 40%">40%</div>
                                     </div>
                                 </div>
                             </div>
@@ -423,8 +419,8 @@
                                 <div>
                                     <h5 class="small">SQLITE</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 70%">70%</div>
+                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar bg-info" style="width: 60%">60%</div>
                                     </div>
                                 </div>
                             </div>
@@ -437,15 +433,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12">
-                                <div>
-                                    <h5 class="small">SQL SERVER</h5>
-                                    <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 50%">50%</div>
-                                    </div>
-                                </div>
-                            </div>
+
                         </div>
 
                     </div>
@@ -459,8 +447,8 @@
                                 <div>
                                     <h5 class="small">UML</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 40%">40%</div>
+                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar bg-info" style="width: 60%">60%</div>
                                     </div>
                                 </div>
                             </div>
@@ -468,8 +456,8 @@
                                 <div>
                                     <h5 class="small">MERISE</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 50%">50%</div>
+                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar bg-info" style="width: 60%">60%</div>
                                     </div>
                                 </div>
                             </div>
@@ -486,8 +474,8 @@
                                 <div>
                                     <h5 class="small">C#</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 30%">30%</div>
+                                        aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar bg-info" style="width: 40%">40%</div>
                                     </div>
                                 </div>
                             </div>
@@ -504,15 +492,6 @@
                                 <div>
                                     <h5 class="small">JAVA</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 30%">30%</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div>
-                                    <h5 class="small">PYTHON</h5>
-                                    <div class="progress" role="progressbar" aria-label="Example with label"
                                         aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                                         <div class="progress-bar bg-info" style="width: 40%">40%</div>
                                     </div>
@@ -520,13 +499,14 @@
                             </div>
                             <div class="col-12">
                                 <div>
-                                    <h5 class="small">OCAML</h5>
+                                    <h5 class="small">PYTHON</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 20%">20%</div>
+                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar bg-info" style="width: 60%">60%</div>
                                     </div>
                                 </div>
                             </div>
+
                         </div>
 
                     </div>
@@ -567,8 +547,8 @@
                                 <div>
                                     <h5 class="small">WINDOWS</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 60%">60%</div>
+                                        aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar bg-info" style="width: 70%">70%</div>
                                     </div>
                                 </div>
                             </div>
@@ -594,8 +574,8 @@
                                 <div>
                                     <h5 class="small">VMWARE</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 40%">40%</div>
+                                        aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar bg-info" style="width: 50%">50%</div>
                                     </div>
                                 </div>
                             </div>
@@ -639,8 +619,8 @@
                                 <div>
                                     <h5 class="small">ANALISIS</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 50%">50%</div>
+                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar bg-info" style="width: 60%">60%</div>
                                     </div>
                                 </div>
                             </div>
@@ -657,8 +637,8 @@
                                 <div>
                                     <h5 class="small">MACHINE LEARNING</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 30%">30%</div>
+                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar bg-info" style="width: 60%">60%</div>
                                     </div>
                                 </div>
                             </div>
@@ -666,8 +646,8 @@
                                 <div>
                                     <h5 class="small">DEEP LERANING</h5>
                                     <div class="progress" role="progressbar" aria-label="Example with label"
-                                        aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
-                                        <div class="progress-bar bg-info" style="width: 10%">10%</div>
+                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar bg-info" style="width: 60%">60%</div>
                                     </div>
                                 </div>
                             </div>
